Prepare v2.26 archive crash hotfix